# kgpt

./: .gitignore  KAGGLE.md  README.md  black.sh  data.txt  finetune.py  generate_training_data.py  gpt_dev.ipynb  inference.py  kaggle_kgpt.ipynb  kgpt-lite.ipynb  kgpt.py  model.py  prepare_data.py  pyproject.toml  train.py  training_data.json
